src/style.css
@import url("https://fonts.googleapis.com/css2?family=Monoton&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap");

@import "tailwindcss";

@theme {
  --color-*: initial;
  --color-light: #f0dbbf;
  --color-medium: #d6b89e;
  --color-dark: #aa8c81;
  --color-blue: #95abca;
  --color-purple: #826179;
  --color-crimson: #4c1c17;
  --color-deep: #342d34;

  --font-heavy: "Monoton", cursive;
  --font-light: "Jost", sans-serif;
}

@keyframes scroll {
  0% {
    transform: translateY(0%);
  }
  50% {
    transform: translateY(0%);
  }
  100% {
    transform: translateY(200%);
  }
}

html,
body {
  @apply snap-y scroll-smooth;
  @apply font-light;
}

h1,
h2 {
  @apply font-heavy;
}

h2 {
  @apply text-4xl;
}

p {
  @apply text-lg;
}

nav {
  @apply pointer-events-auto mx-auto w-fit py-2 text-xl hidden lg:block;

  a {
    @apply hover:underline;
  }
}

ul {
  @apply text-lg list-disc;
}

.section {
  @apply relative w-full h-screen snap-start pt-16 lg:pt-0 flex flex-col lg:flex-row items-center overflow-clip before:absolute before:inset-0 before:scale-10 before:-z-100;

  @media (max-height: 750px) {
    @apply h-[120vh];
  }
}

.header {
  @apply sticky top-0 pt-10 pb-4 px-4 left-0 right-0 w-full text-center text-4xl backdrop-blur will-change-transform;

  a {
    @apply cursor-pointer pointer-events-auto;
  }
}

.header-wrapper {
  @apply absolute z-3 inset-0 overflow-hidden pointer-events-none;
}

.content-block {
  @apply -z-1 translate-z-0 max-w-80 text-3xl text-justify flex flex-col gap-4;
  animation: scroll linear;
  animation-timeline: view(-700px);
}

.content-right {
  @apply lg:mr-20 xl:mr-40 2xl:mr-60;
}

.content-left {
  @apply lg:ml-20 xl:ml-40 2xl:ml-60;
}

.decal-wrapper {
  @apply absolute z-2 inset-0 pointer-events-none transform-3d perspective-distant;
}

.decal-wrapper-left {
  @apply perspective-origin-[160%_120%] md:perspective-origin-[100%_120%] lg:perspective-origin-[80%_120%];
}

.decal-wrapper-right {
  @apply perspective-origin-[-60%_120%] md:perspective-origin-[0%_120%] lg:perspective-origin-[20%_120%];
}

.roof-front {
  transform: rotateX(30deg) translateZ(-2.5rem)
    translateY(calc(-0.5rem * (10 - 5 * sqrt(3))));

  @media (min-width: 64rem) {
    transform: rotateX(30deg) translateZ(-5rem)
      translateY(calc(-1rem * (10 - 5 * sqrt(3))));
  }
}

.roof-side {
  transform: translateZ(-5rem) rotateY(90deg) translateZ(5rem) rotateX(30deg)
    translateZ(-2.5rem) translateY(calc(-0.5rem * (10 - 5 * sqrt(3))));

  @media (min-width: 64rem) {
    transform: translateZ(-10rem) rotateY(90deg) translateZ(10rem)
      rotateX(30deg) translateZ(-5rem)
      translateY(calc(-1rem * (10 - 5 * sqrt(3))));
  }
}

.skew-wall-right {
  transform: rotateY(45deg) translateX(5rem);

  @media (min-width: 64rem) {
    transform: rotateY(45deg) translateX(10rem);
  }
}

.skew-wall-left {
  transform: rotateY(-45deg) translateX(-5rem);

  @media (min-width: 64rem) {
    transform: rotateY(-45deg) translateX(-10rem);
  }
}

.turret-right {
  transform: rotateY(45deg);

  @media (min-width: 64rem) {
    z-index: 100;
    transform: rotateY(45deg);
  }
}

